<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HK-Abrechnung</string>
    <string name="einstellungen">Einkommen</string>
     <string name="daten_hochladen">Ausgabentabelle hochladen und vom Handy löschen</string>
     <string name="server">Hochladen und abrechnen</string>
    <string name="delete_table">Tabelle löschen</string>
    <string name="hello_world">Hello world!</string>
    <string name="lucia">Lucia</string>
    <string name="piet">Piet</string>
    <string name="betrag">Betrag</string>
    <string name="gemeinsam">gemeinsam</string>
    <string name="ausgelegt">ausgelegt</string>
	<string name="fertig">Fertig</string>
	<string name="ok">OK</string>
	<string name="title_activity_display_data">Ausgabentabelle</string>
    <string name="goto_table">zur Ausgabentabelle</string>
    <string name="goto_neueAusgabe">neue Ausgabe</string>
    <string name="bestimme_abrechnung">Abrechnung</string>
    <string name="abbrechen">Abbrechen</string>
    <string name="title_activity_edit_data">Bearbeiten</string>
    <string name="einkommen_lucia">Einkommen Lucia</string>
    <string name="einkommen_piet">Einkommen Piet</string>
	  <string name="bearbeiten">Bearbeiten</string>
	  <string name="datum">TT-MM-JJJJ</string>
	  <string name="ja">ja</string>
	  <string name="nein">nein</string>
	  <string name="gemeinsameAusgabe">gemeinsame Ausgabe</string>
	   <string name="getätigtVon">getätigt von</string> 
	   	  
</resources>
