<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BearbeitenActivity" >

    <CheckBox
        android:id="@+id/checkBoxPietBearbeiten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/piet" />

    <CheckBox
        android:id="@+id/checkBoxLuciaBearbeiten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/checkBoxGemeinsamBearbeiten"
        android:layout_alignLeft="@+id/checkBoxAusgelegtBearbeiten"
        android:text="@string/lucia" />

    <EditText
        android:id="@+id/editBetragAusgabeBearbeiten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBoxGemeinsamBearbeiten"
        android:layout_below="@+id/checkBoxGemeinsamBearbeiten"
        android:ems="10"
        android:hint="@string/betrag"
        android:inputType="numberDecimal" />

    <CheckBox
        android:id="@+id/checkBoxAusgelegtBearbeiten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/buttonFertigBearbeiten"
        android:layout_below="@+id/checkBoxLuciaBearbeiten"
        android:layout_marginRight="19dp"
        android:text="@string/ausgelegt" />

    <CheckBox
        android:id="@+id/checkBoxGemeinsamBearbeiten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBoxPietBearbeiten"
        android:layout_below="@+id/checkBoxPietBearbeiten"
        android:text="@string/gemeinsam" />

    <Button
        android:id="@+id/buttonFertigBearbeiten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editBetragAusgabeBearbeiten"
        android:layout_toRightOf="@+id/editBetragAusgabeBearbeiten"
        android:onClick="saveData"
        android:text="@string/fertig" />

    <EditText
        android:id="@+id/editDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonFertigBearbeiten"
        android:layout_alignLeft="@+id/editBetragAusgabeBearbeiten"
        android:ems="10"
        android:hint="@string/datum"
        android:inputType="date" />

    <Button
        android:id="@+id/buttonAbbrechenBearbeiten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editDate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:onClick="abbrechenBearbeiten"
        android:text="Abbrechen" />

</RelativeLayout>

